{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 13,
  "lineage": "9d4a6a82-abeb-cce2-aaa0-69ed8bfaa958",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "WEB12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:subnet/subnet-0db1fc88e8d0ecf82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.120.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "APP1"
                ]
              }
            ],
            "id": "subnet-0db1fc88e8d0ecf82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145038884830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "APP1"
            },
            "vpc_id": "vpc-058d190c2465abda5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "mysubnetno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:subnet/subnet-0db1fc88e8d0ecf82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.120.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "APP1"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-058d190c2465abda5"
                ]
              }
            ],
            "id": "subnet-0db1fc88e8d0ecf82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145038884830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "APP1"
            },
            "vpc_id": "vpc-058d190c2465abda5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ravi123",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d979355d03fa2522",
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:instance/i-0ca2da3f5751e4018",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca2da3f5751e4018",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DELL8.rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c72938fc51df5e92",
            "private_dns": "ip-10-120-0-155.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.120.0.155",
            "public_ip": "54.238.202.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b5e7c338a0b5197",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db1fc88e8d0ecf82",
            "tags": {
              "Name": "ravi123"
            },
            "tags_all": {
              "Name": "ravi123"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffe4293ee09586a9"
            ]
          },
          "dependencies": [
            "aws_security_group.Sgroup",
            "aws_subnet.APP1",
            "aws_vpc.RAVI",
            "data.aws_ami_ids.ubuntu_2204",
            "data.aws_subnet.WEB12"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Mygateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:internet-gateway/igw-058dab1a2c65a0701",
            "id": "igw-058dab1a2c65a0701",
            "owner_id": "145038884830",
            "tags": {
              "Name": "Mygateway"
            },
            "tags_all": {
              "Name": "Mygateway"
            },
            "vpc_id": "vpc-058d190c2465abda5"
          },
          "dependencies": [
            "aws_vpc.RAVI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Myroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:route-table/rtb-01a9f51c91e42f0a0",
            "id": "rtb-01a9f51c91e42f0a0",
            "owner_id": "145038884830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058dab1a2c65a0701",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Myroutetable"
            },
            "tags_all": {
              "Name": "Myroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-058d190c2465abda5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Mygateway",
            "aws_vpc.RAVI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028055fe37ca441cd",
            "route_table_id": "rtb-01a9f51c91e42f0a0",
            "subnet_id": "subnet-0db1fc88e8d0ecf82"
          },
          "dependencies": [
            "aws_internet_gateway.Mygateway",
            "aws_route_table.Myroutetable",
            "aws_subnet.APP1",
            "aws_vpc.RAVI",
            "data.aws_subnet.mysubnetno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:security-group/sg-0ffe4293ee09586a9",
            "description": "all rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ffe4293ee09586a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Sgroup",
            "name_prefix": "",
            "owner_id": "145038884830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sgroup"
            },
            "tags_all": {
              "Name": "Sgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-058d190c2465abda5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.APP1",
            "aws_vpc.RAVI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "APP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:subnet/subnet-0db1fc88e8d0ecf82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.120.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db1fc88e8d0ecf82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145038884830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APP1"
            },
            "tags_all": {
              "Name": "APP1"
            },
            "vpc_id": "vpc-058d190c2465abda5"
          },
          "dependencies": [
            "aws_vpc.RAVI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RAVI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:145038884830:vpc/vpc-058d190c2465abda5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0bcea4fdcbbba1c2d",
            "default_route_table_id": "rtb-0fd874ac5ff987906",
            "default_security_group_id": "sg-0747704bf37261285",
            "dhcp_options_id": "dopt-014b3239999ba8661",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058d190c2465abda5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd874ac5ff987906",
            "owner_id": "145038884830",
            "tags": {
              "Name": "RAVI"
            },
            "tags_all": {
              "Name": "RAVI"
            }
          }
        }
      ]
    }
  ]
}